# Aura

./: .gitignore  AGENTS.md  CLAUDE.md  ECOSYSTEM.md  README.md  firestore.indexes.json  firestore.rules  pubspec.yaml
backend/: Dockerfile  Dockerfile.api  Dockerfile.worker  README.md  REMINDER_OBSERVABILITY_PLAN.md  constraints.txt  deploy.sh  pyproject.toml  start.sh
backend/scripts/: audit_memory_quality.py  audit_tracking_topic.py  check_meeting_storage.py  expire_tracking_checkpoints.py  meetings_e2e.py  migrate_tracking_to_fixtures.py  reset_trials.py  stress_test_framer.py
backend/src/: main.py
backend/src/agent/: buddy_agent.py  generate_filler_audio.py  voice_agent.py  voice_prompt.py
backend/src/agent/voice/: __init__.py  action_policy.py  action_telemetry.py  auth.py  capabilities.py  context.py  context_compaction.py  draft_outbound.py  emotion_tags.py  errors.py  fallback_tts_wrapper.py  fetchers.py  free_tier_limit.py  greeting.py  pipelines.py  point_tag.py  (+13 more)
backend/src/agents/: agent_base.py  agent_registry.py  orchestrator.py  system_prompts.py
backend/src/config/: settings.py
backend/src/handlers/: account.py  aura.py  billing.py  briefing.py  buddy_pills.py  calendar.py  chat.py  connectors.py  daily_notification.py  dashboard_link.py  desktop_dashboard.py  desktop_notifications.py  desktop_profile.py  devices.py  dietary_profile.py  draft_outbound.py  drafts.py  engagement.py  entitlement.py  history.py  keyboard.py  mcp.py  meetings.py  memories.py  nutrition.py  onboarding_profile.py  orchestrate.py  pairing.py  scheduler.py  screen_demo.py  screen_saves.py  signal_content_ingest.py  signal_events.py  signal_feed.py  signal_sports_ingest.py  signal_tick.py  threads.py  web_auth.py
backend/src/lib/: logger.py  query_logger.py
backend/src/services/: action_intent_policy.py  aura_reflection.py  billing.py  buddy_voice.py  chat_error_copy.py  claude_client.py  entitlement.py  entitlement_notifications.py  fcm_token_registry.py  gcs.py  gemini_chat_fallback.py  geo.py  gmail_connector.py  google_calendar_connector.py  google_oauth.py  life_facts_schema.py  model_provider.py  notification_budget.py  notification_ledger.py  notification_rewriter.py  notification_service.py  openai_chat_fallback.py  timezone_utils.py  tool_executor.py  user_aura_extractor.py  user_aura_schema.py  voice_history_store.py  voice_session_fields.py  voice_session_summarizer.py  voice_transcript_reconciliation.py
backend/src/shared/: tool_thinking_phrases.py  tools.py
backend/tests/: conftest.py  test_account_deletion.py  test_action_intent_policy.py  test_active_users_roundtrip.py  test_aura_reflection.py  test_aura_reflection_golden.py  test_billing_checkout.py  test_billing_webhook.py  test_brave_news.py  test_brave_search.py  test_briefing_agent.py  test_briefing_engine.py  test_briefing_selector.py  test_briefing_store.py  test_buddy_pills.py  test_buddy_voice.py  test_calendar_event_creation.py  test_calendar_pipeline.py  test_chat_attachments.py  test_chat_completion.py  test_chat_fallback_chain_integration.py  test_check_meeting_storage.py  test_claude_client.py  test_connectors_web_oauth.py  test_content_category_map.py  test_content_ingest_fallback.py  test_content_ingest_sports.py  test_content_pool_fresh.py  test_content_pool_sweep.py  test_cors.py  test_curiosity_agent.py  test_daily_notification_handler.py  test_daily_notification_orchestrator.py  test_dashboard_link.py  test_desktop_dashboard.py  test_desktop_outbox.py  test_devices.py  test_draft_outbound_tool.py  test_embedder.py  test_emotion_tags.py  (+120 more)
(+477 files in other folders)
