[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "juno-backend"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",

    # Validation & config
    "pydantic>=2.11",
    "pydantic-settings>=2.7",
    "python-dotenv>=1.0",

    # LiveKit — voice pipeline (STT: Deepgram, LLM: OpenAI/Anthropic/Gemini, TTS: Cartesia, VAD: Silero)
    # >=1.6.4: async tools (ctx.update / ctx.with_filler, 1.6.0) used by
    # draft_outbound_message; 1.6.1+ ships Turn Detector v1.0 (re-run
    # download-files after upgrading).
    "livekit-agents[deepgram,anthropic,cartesia,silero,google,turn-detector,openai]>=1.6.4",
    "livekit-api>=0.7",

    # Anthropic Claude
    "anthropic>=0.52",

    # OpenAI — GPT chat-fallback tier (services/openai_chat_fallback.py). Previously only
    # pulled in transitively via livekit-agents[openai] for the voice worker; now imported
    # directly by the text-chat path too, so it needs its own explicit floor.
    "openai>=1.50",

    # Firebase
    "firebase-admin>=6.7",

    # Google Calendar
    "google-api-python-client>=2.168",
    "google-auth>=2.40",
    "google-auth-httplib2>=0.2",

    # Google Gen AI SDK (Gemini — embeddings, cheap-tier model calls)
    "google-genai>=1.0",

    # Google Cloud Tasks (durable delayed job scheduling)
    "google-cloud-tasks>=2.16",

    # Google Cloud Storage (screen-save images, services/gcs.py). Already pulled in
    # transitively via firebase-admin, but declared explicitly since it's now imported
    # directly (same reasoning as the openai>=1.50 floor above).
    "google-cloud-storage>=2.18",

    # RSS feed parsing (daily notification news fallback)
    "feedparser>=6.0",

    # MCP server SDK (FastMCP — POST /mcp endpoint for voice agent tool calls)
    "mcp>=1.0",

    # Async HTTP clients for scheduled agent data fetchers
    "httpx>=0.28",

    # PostHog — server-side product analytics (notification re-engagement funnel).
    # Pinned to the 5.x line (installed + tested locally: 5.4.0). The
    # Posthog(project_api_key=..., host=...) ctor and capture(distinct_id, event,
    # properties) signature this code calls are verified against 5.x.
    "posthog>=5.4,<6",

    # Langfuse — LLM observability write side (services/analytics/llm_telemetry.py).
    # v3 is the OTel-based SDK line; batched background ingestion, atexit flush.
    "langfuse>=3.0",

]

[project.optional-dependencies]
dev = [
    "ruff>=0.9",
    "pyright>=1.1",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = []

[tool.coverage.run]
source = ["src"]
omit = [
    "src/agent/*",
    "src/agents/*",
    "src/handlers/chat.py",
    "src/handlers/connectors.py",
    "src/handlers/devices.py",
    "src/handlers/engagement.py",
    "src/handlers/notification_reply.py",
    "src/handlers/scheduled_agents.py",
    "src/main.py",
    "src/services/claude_client.py",
    "src/services/engagement/*",
    "src/services/google_calendar_connector.py",
    "src/services/model_provider.py",
    "src/services/request_auth.py",
    "src/services/tool_executor.py",
    "src/shared/*",
    "src/lib/query_logger.py",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
